Add environment variables to securely send authentication data to Twilio. Install gem figaro.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@
 
 # Ignore environment.rb for Twilio credentials. 
 /config/environment.rb
+# Ignore application configuration
+/config/application.yml
