--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
       "node": "16.x"
     },
     "scripts": {
+      "start": "node index.js",
       "build": "npm install --prefix client && npm run build --prefix client",
       "clean": "rm -rf public",
       "deploy": "cp -a client/build/. public/",
